# ChessScapeRender

./: .gitignore  CMakeLists.txt  README.md  config.sh  run.sh
include/: ShaderClass.h  mesh.h  model.h  utility.h
resources/Shaders/: chess_fs.txt  chess_vs.txt  skybox_vs.txt
src/: 3D-Chess.cpp  ShaderClass.cpp  mesh.cpp  model.cpp  stb_image_impl.cpp  utility.cpp
